start working an filter block

--- a/index.html
+++ b/index.html
@@ -161,12 +161,16 @@
                         </div>
                     </div>
                     <div class="search__KAP">
-                        <span class="search__keywords">Keywords</span>
-                        <input type="text" class="search__inpK" placeholder="Tablet">
-                        <span class="search__titelprice">Price</span>
-                        <input type="text" class="search__price" placeholder="10">
-                        <span class="search__def">-</span>
-                        <input type="text" class="search__price" placeholder="1000">
+                        <label for="">
+                            <span class="search__keywords">Keywords</span>
+                            <input type="text" class="search__inpK" placeholder="Tablet">
+                        </label>
+                        <label for="">
+                            <span class="search__titelprice">Price</span>
+                            <input type="text" class="search__price" placeholder="10">
+                            <span class="search__def">-</span>
+                            <input type="text" class="search__price" placeholder="1000">
+                        </label>
                         <input type="checkbox" checked id="chek1" class="search__check">
                         <label for="chek1" class="search__titelCheck">Free shoping
                         </label>
@@ -480,19 +484,22 @@
                     <li class="nav__li"><a href="#" class="nav__ali">Contacts</a></li>
                 </ul>
                 <ul class="nav__socsety">
-                    <li class="nav__liIcon"><a href="#" class="nav__aIcon"><i class="icon-twitter nav__icon"></i></a></li>
-                    <li class="nav__liIcon"><a href="#" class="nav__aIcon"><i class="icon-facebook nav__icon"></i></a></li>
+                    <li class="nav__liIcon"><a href="#" class="nav__aIcon"><i class="icon-twitter nav__icon"></i></a>
+                    </li>
+                    <li class="nav__liIcon"><a href="#" class="nav__aIcon"><i class="icon-facebook nav__icon"></i></a>
+                    </li>
                     <li class="nav__liIcon"><a href="#" class="nav__aIcon"><i class="icon-gplus nav__icon"></i></a></li>
                 </ul>
             </nav>
             <div class="foot">
-                <p class="foot__p">She gave my mother such a turn, that I have always been convinced I am indebted to Miss Betsey for having been born on a Friday.</p>
+                <p class="foot__p">She gave my mother such a turn, that I have always been convinced I am indebted to
+                    Miss Betsey for having been born on a Friday.</p>
                 <ul class="foot__ul">
                     <li class="foot__li"><a href="#" class="foot__a">Privacy Policy</a></a></li>
                     <li class="foot__li"><a href="#" class="foot__a">Terms and Conditions</a></a></li>
                 </ul>
             </div>
-        </footer> 
+        </footer>
     </div>
     <script src='./src/js/slider.js'></script>
 </body>
