--- a/index.html
+++ b/index.html
@@ -161,19 +161,20 @@
                         </div>
                     </div>
                     <div class="search__KAP">
-                        <label for="">
+                        <label for="Keywords" class="search__labelKeywords">
                             <span class="search__keywords">Keywords</span>
                             <input type="text" class="search__inpK" placeholder="Tablet">
                         </label>
-                        <label for="">
+                        <label for="price" class="search__labelPrice">
                             <span class="search__titelprice">Price</span>
                             <input type="text" class="search__price" placeholder="10">
                             <span class="search__def">-</span>
                             <input type="text" class="search__price" placeholder="1000">
                         </label>
-                        <input type="checkbox" checked id="chek1" class="search__check">
-                        <label for="chek1" class="search__titelCheck">Free shoping
-                        </label>
+                        <div class="search__lebelcheck">
+                            <input type="checkbox" checked id="chek1" class="search__check">
+                            <label for="chek1" class="search__titelCheck">Free shoping</label>
+                        </div>
                     </div>
                     <div class="search__ship">
                         <span class="search__titelShip">Ship to:</span>
