--- a/index.html
+++ b/index.html
@@ -147,8 +147,6 @@
         <main class="main">
             <section class="bodyShop">
                 <div class="search">
-
-
                     <div class="search__sortBy">
                         <span class="search__titelSort">Sort by:</span>
                         <div class="search__typeSort">
@@ -161,8 +159,7 @@
                                 <li class="search__li" data-id='1'>new items</li>
                             </ul>
                         </div>
-                    </div>
-               
+                    </div>             
                 <div class="search__KAP">
                     <label for="Keywords" class="search__labelKeywords">
                         <span class="search__keywords">Keywords</span>
@@ -254,7 +251,7 @@
             </li>
         </ul>
         <ul class="condition">
-            <li class="condition__li"> <span class="condition__brands">Brands</span>
+            <li class="condition__li"> <span class="condition__brands">Condition</span>
                 <a href="#" class="condition__abrands"> See All</a></li>
             <li class="condition__li">
                 <input type="checkbox" class="condition__inputCheck" id="New">
