--- a/index.html
+++ b/index.html
@@ -10,35 +10,10 @@
 </head>
 
 <body>
-    <!--    <div class="setka">
-        <div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </div>
-        000
-    </div>  -->
     <div class="contener">
 
         <header class="header">
             <div class="menuTop">
-                <!-- <div class="menuTop__Icon">
-                    <svg width="20" height="14" class="menuTop__IconSvg">
-                        <path
-                            d="M19.000,14.000 L1.000,14.000 C0.448,14.000 -0.000,13.552 -0.000,13.000 L-0.000,13.000 C-0.000,12.448 0.448,12.000 1.000,12.000 L19.000,12.000 C19.552,12.000 20.000,12.448 20.000,13.000 L20.000,13.000 C20.000,13.552 19.552,14.000 19.000,14.000 ZM19.000,8.000 L1.000,8.000 C0.448,8.000 -0.000,7.552 -0.000,7.000 L-0.000,7.000 C-0.000,6.448 0.448,6.000 1.000,6.000 L19.000,6.000 C19.552,6.000 20.000,6.448 20.000,7.000 L20.000,7.000 C20.000,7.552 19.552,8.000 19.000,8.000 ZM19.000,2.000 L1.000,2.000 C0.448,2.000 -0.000,1.552 -0.000,1.000 L-0.000,1.000 C-0.000,0.448 0.448,0.000 1.000,0.000 L19.000,0.000 C19.552,0.000 20.000,0.448 20.000,1.000 L20.000,1.000 C20.000,1.552 19.552,2.000 19.000,2.000 Z" />
-                    </svg>
-                </div> -->
                 <a href="index.html" class="menuTop__logo">
                     <svg width="92" height="25" class="menuTop__logoSvg">
                         <path
@@ -303,7 +278,7 @@
         </div>
     </aside>
     <div class="productsPage">
-        <div class="contItem">
+       <!--  <div class="contItem">
             <img src="build/img/Photo1.png" width="198" height="180" alt="imgProduct" class="contItem__img">
             <span class="contItem__name">Lorem ipsum dolor sit.</span>
             <span class="contItem__price">$ 5.55</span>
@@ -375,7 +350,7 @@
             <span class="contItem__name">Lorem ipsum dolor sit.</span>
             <span class="contItem__price">$ 5.55</span>
             <button class="contItem__button">add to cart</button>
-        </div>
+        </div> -->
 
     </div>
     <nav class="navPagination">
