--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <span class="menuTop__line"></span>
                     <span class="menuTop__line"></span>
                 </div>
-                <nav class="menuTop__nav">
+                <nav class="menuTop__nav" id="menuTop__nav">
                     <a href="#" class="menuTop__a">Home</a>
                     <a href="#" class="menuTop__a">Devices</a>
                     <a href="#" class="menuTop__a">Delivery & Payment</a>
@@ -41,9 +41,7 @@
                     </div>
                     <span class="menuTop__spanCart">Cart</span>
                     <span class="menuTop__countCart">0</span>
-                    <div class="contCartProducts">
-
-
+                    <div class="contCartProducts" id="contCartProducts">
                         <div class="contCartProducts__contItem">
                             <img src="build/img/Photo1.png" width="198" height="180" alt="imgProduct"
                                 class="contCartProducts__img">
@@ -82,7 +80,6 @@
                             <span class="contCartProducts__allSumm">$ 0</span>
                             <span class="contCartProducts__allQuantity">0</span>
                             <button class="contCartProducts__allClean">X</button>
-
                         </div>
                     </div>
                 </div>
